• mundhenk-logik/skript.latex   · Änderungen am Einleitungstext von Kapitel 1 um besser den Unterschied     zwischen Syntax und Semantik hervorzuheben.
  · Letzte Änderungen an Abschnitt 1.3.


git-svn-id: https://svn.lug-jena.de/uni-skripte@967 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -464,19 +464,33 @@ die inhärent wahr sind, sogenannte Tautologien
 Sie machen z.\,B. Aussagen über das korrekte Schlussfolgern.
 Nun möchte man z.\,B. gerne wissen, ob eine Schlussfolgerung korrekt ist.
 Das heißt, man will wissen, ob eine Aussagenverknüpfung eine Tautologie ist.
-Dazu gibt es verschiedene Ansätze.
-Der semantische Ansatz basiert auf dem Begriff Wahrheit\footnote{In der
-Aussagenlogik ist der Wahrheits"=Begriff noch handhabbar, in der
-Prädikatenlogik nicht mehr.}, wärend der syntaktische Ansatz auf der Struktur
-der Aussagenverknüpfungen basiert.
+Dazu gibt es zwei Ansätze:
+\begin{itemize}
+ \item Der semantische Ansatz basiert auf dem Begriff Wahrheit\footnote{In der
+  Aussagenlogik ist der Wahrheits"=Begriff noch handhabbar, in der
+  Prädikatenlogik nicht mehr.} und bewertet Formeln aufgrund ihrere
+  Wahrheitswerte, die sie unter bestimmten Belegungen haben; eine Tautologie
+  ist eine Formel, die unter allen möglichen Belegungen wahr ist. Eine
+  Schlussfolgerung ist also dann korrekt, wenn sie für alle Belegungen
+  zulässig ist.
+
+ \item Der syntaktische Ansatz hingegen beruht auf der Betrachtung der
+  Struktur -- also dem Aussehen -- von Aussagenverknüpfungen. Eine
+  Tautologie ist unter dieser Sichtweise eine Formel, die sich aus einer Menge
+  von vorgegebenen Axiomen mit Hilfe bestimmter Regeln herleiten lässt.
+\end{itemize}
+
 Wir werden hier verschiedene syntaktische Ansätze (Theorien)
 kennenlernen.
-Während der semantische Ansatz durch den Wahrheits"=Begriff klar definiert ist,
-benutzen Theorien den Wahrheits"=Begriff nicht.
+Während der semantische Ansatz durch den Wahrheitsbegriff klar definiert ist,
+benutzen Theorien den Wahrheitsbegriff nicht.
 Deshalb muss man nachweisen, dass sie das Ziel erreichen,
 Tautologien von den übrigen Formeln zu unterscheiden.
 Dieses Ziel wird durch die beiden Eigenschaften der
-Korrektheit und der Vollständigkeit gekennzeichnet.
+Korrektheit und der Vollständigkeit gekennzeichnet. Damit schlägt man den
+Bogen von dem semantischen Ansatz zum syntaktischen Ansatz und führt beide auf
+den gleichen Kern zurück. Es ist also egal, auf welchem Wege man sich der
+Bewertung einer Formel nähert, das Ergebnis ist beide Male das gleiche.
 
 Damit ist umrissen, was in diesem Kapitel passiert.
 Zuerst werden Verknüpfungen von Aussagen
@@ -1585,7 +1599,7 @@ Letztlich ist die Folgerung nichts anderes als eine Implikation
 (informell gesprochen).
 Die Aussage des folgenden Deduktionstheorems (für einen einfachen Fall) lautet:
 \begin{quote}
-wenn man $\beta$ aus der Hypothese $\alpha$ folgern kann ($\alpha \vdash \beta$),
+Wenn man $\beta$ aus der Hypothese $\alpha$ folgern kann ($\alpha \vdash \beta$),
 dann ist $\alpha\rightarrow\beta$ beweisbar ($\vdash\alpha\rightarrow\beta$).
 \end{quote}
 Mit Benutzung des Deduktionstheorems kann also $\vdash B\rightarrow B$
@@ -1608,7 +1622,7 @@ Der Sinn des Deduktionstheorems ist seine Benutzung zur Vereinfachung von Beweis
       \alpha\rightarrow\beta$. Nimmt man zusätzlich $\alpha$ zur Menge
       $\Gamma$ hinzu, gilt $\Gamma, \alpha \Lvdash \alpha$
       und $\Gamma, \alpha \Lvdash \alpha\rightarrow\beta$.
-      Daraus kann man mittels Anwendung von modus ponens: $\Gamma,\alpha
+      Daraus kann man mittels Anwendung von modus ponens $\Gamma,\alpha
       \Lvdash \beta$ zeigen.
 
      \item[\glqq$\Rightarrow$\grqq{}] Es gelte $\Gamma, \alpha \Lvdash \beta$.
@@ -1621,13 +1635,13 @@ Der Sinn des Deduktionstheorems ist seine Benutzung zur Vereinfachung von Beweis
         \begin{faelle}
          \item $\beta$ ist ein Axiom oder $\beta\in\Gamma$.
 
-          Dann gilt $\Gamma \Lvdash \beta$. Mit Axiom A1
+          Dann gilt $\Gamma \Lvdash \beta$. Mit Axiom~(A1)
           $\beta \rightarrow (\alpha\rightarrow\beta)$ und modus ponens folgt
           $\Gamma \Lvdash \alpha \rightarrow\beta$.
           \begin{align*}
             (1)\quad &\beta&\text{Hypothese}\\
             (2)\quad &\beta\rightarrow(\alpha\rightarrow\beta)
-               &\text{A1}\\
+               &\text{(A1)}\\
             (3)\quad &\alpha\rightarrow\beta &\text{MP 1,2}
           \end{align*}
 
@@ -1652,29 +1666,28 @@ Der Sinn des Deduktionstheorems ist seine Benutzung zur Vereinfachung von Beweis
 
         \begin{faelle}
          \item $\beta$ ist ein Axiom oder aus $\Gamma$ oder
-          $\beta=\alpha$.
-
-          geht genauso wie Induktionsanfang.
+          $\beta=\alpha$ geht genauso wie der Induktionsanfang.
 
          \item Die Formel $\beta$ entsteht durch modus ponens aus $\alpha_{i}$ und
           $\alpha_{j}$ ($i,j\leq n$), wobei o.\,B.\,d.\,A.
-          $\alpha_{j}=(\alpha_{i}\rightarrow \beta)$
+          $\alpha_{j}=(\alpha_{i}\rightarrow \beta)$.
 
-          Nach Induktionsvorraussetzung gilt $\Gamma \Lvdash
+          Nach Induktionsvorraussetzung lässt sich daher $\Gamma \Lvdash
           \alpha\rightarrow\alpha_{i}$ und $\Gamma \Lvdash
-          \alpha\rightarrow (\alpha_{i}\rightarrow\beta)$. Mit der
-          Ausprägung $(\alpha\rightarrow(\alpha_{i}\rightarrow\beta))
+          \alpha\rightarrow (\alpha_{i}\rightarrow\beta)$ beweisen. Aus dem
+          Axiomenschemata~(A2) entsteht das Axiom
+          $(\alpha\rightarrow(\alpha_{i}\rightarrow\beta))
           \rightarrow \big((\alpha\rightarrow\alpha_{i}) \rightarrow
-          (\alpha\rightarrow\beta)\big)$ von Axiom A2 folgt durch Anwendung
-          von modus ponens mit $\Gamma \Lvdash
-          \alpha\rightarrow\beta$.
+          (\alpha\rightarrow\beta)\big)$ mit dem man durch Anwendung
+          des modus ponens $\Gamma \Lvdash \alpha\rightarrow\beta$ zeigen kann.
         \end{faelle}
       \end{mdescription}
     \end{mdescription}
   \end{proof}
 \end{satz}
 
-Im Beweis des folgenden Lemmas werden wir das Deduktionstheorem benutzen.
+Um die Anwendung des Deduktionstheorems zu verdeutlichen, werden wir es im
+Beweis des folgenden Lemmas verwenden.
 
 \begin{lemma}\label{lem:1}
   $\alpha\rightarrow(\beta \rightarrow\gamma), \beta \Lvdash
@@ -1705,8 +1718,8 @@ Zum Beispiel kann
 $\alpha\rightarrow(\beta \rightarrow\gamma), \beta \Lvdash \alpha\rightarrow\gamma$
 wie eine zusätzliche Ableitungsregel verwendet werden.
 Mit dem Deduktionstheorem folgt daraus
-$\Lvdash \alpha\rightarrow(\beta \rightarrow\gamma)\rightarrow
-  ( \beta \rightarrow \alpha\rightarrow\gamma)$.
+$\Lvdash (\alpha\rightarrow(\beta \rightarrow\gamma))\rightarrow
+  ( \beta \rightarrow (\alpha\rightarrow\gamma))$.
 Wenn man in einem Beweis
 bereits $\alpha\rightarrow(\beta \rightarrow\gamma)$ und
 $\beta$ bewiesen hat,
@@ -1721,14 +1734,14 @@ Für jede aussagenlogische Formel $\beta$ gilt $\Lvdash \neg\neg \beta \rightarr
     \begin{align*}
       (1)\quad &(\neg\beta \rightarrow \neg\neg\beta) \rightarrow \big( (\neg\beta
          \rightarrow\neg\beta) \rightarrow \beta \big)
-         &\text{A3}\\
+         &\text{(A3)}\\
       (2)\quad &\neg\beta \rightarrow \neg\beta&\text{\autoref{lem:0}}\\
       (3)\quad &(\neg\beta \rightarrow \neg\neg\beta) \rightarrow \beta
          &\text{aus 1,2 mit \autoref{lem:1}}\\
       (4)\quad &\neg\neg\beta \rightarrow (\neg\beta \rightarrow \neg\neg\beta)
-         &\text{A1}\\
+         &\text{(A1)}\\
       (5)\quad &\neg\neg \beta \rightarrow\beta &\text{aus 4, 3 mit
-         \autoref{lem:1}}
+         \autoref{bsp:2}}
     \end{align*}
   \end{proof}
 \end{lemma}
@@ -1750,13 +1763,13 @@ Folgt mit dem Deduktionstheorem aus \autoref{lem:01}.
     \begin{align*}
       (1)\quad & (\neg\neg\neg \beta\rightarrow \neg\beta)\rightarrow
          \big((\neg\neg\neg\beta\rightarrow\beta)\rightarrow \neg\neg\beta\big) &
-         \text{A3}\\
+         \text{(A3)}\\
       (2)\quad & \neg\neg\neg\beta \rightarrow \neg\beta &
          \text{\autoref{lem:2}}\\
       (3)\quad & (\neg\neg\neg\beta\rightarrow\beta)\rightarrow
          \neg\neg\beta &\text{MP 2,1}\\
       (4)\quad & \beta \rightarrow (\neg\neg\neg\beta \rightarrow \beta)
-         &\text{A1}\\
+         &\text{(A1)}\\
       (5)\quad & \beta \rightarrow \neg\neg\beta
          &\text{\autoref{bsp:2} mit 4,3}
     \end{align*}
@@ -1806,8 +1819,7 @@ Folgt mit dem Deduktionstheorem aus \autoref{lem:01}.
   und keine Zahlen als Bezeichnung der Schritte), da ein Beweis in der
   Theorie~$\mathrm{L}$ eine Folge von Formeln ist, in denen jedoch nicht
   das Zeichen $\vdash$ vorkommen darf. Jede Zeile mit einem $\vdash$ steht
-  eigentlich als Abkürzung für einen korrekten formalen Beweis \ldots{}
-
+  eigentlich als Abkürzung für einen korrekten formalen Beweis.
   Uns soll dies hier jedoch genügen, da damit der Beweis skizziert ist.
   Der formale Beweis ist einfach nur länger.
 \end{lemma}
@@ -1829,7 +1841,7 @@ Folgt mit dem Deduktionstheorem aus \autoref{lem:01}.
     (6)\quad & \neg \beta\rightarrow \neg\neg\alpha & \text{MP 2,5} \\
     (7)\quad & (\neg \beta \rightarrow \neg\neg \alpha) \rightarrow
        ((\neg\beta\rightarrow\neg\alpha) \rightarrow \beta) &
-       \text{A3}\\
+       \text{(A3)}\\
     (8)\quad & (\neg\beta\rightarrow\neg\alpha) \rightarrow \beta &
        \text{MP 6,7} \\
     (9)\quad & \beta & \text{MP 4,8}
@@ -1845,11 +1857,11 @@ Nocheinmal als Zusammenfassung alle gezeigten Theoreme:
 \begin{align*}
   \alpha &\rightarrow\alpha &\text{\autoref{lem:0}}\\
   \neg\neg\alpha &\rightarrow \alpha  &\text{\autoref{lem:2}}\\
-  \alpha &\rightarrow \neg\neg \alpha &\text{\autoref{lem:3}}\\
+  \alpha &\rightarrow \neg\neg \alpha &\text{\autoref{lem:3}}\displaybreak[0]\\
   \neg\alpha &\rightarrow (\alpha \rightarrow \beta)
-     &\text{\autoref{lem:4}}\\
+     &\text{\autoref{lem:4}}\displaybreak[0]\\
   (\neg \beta \rightarrow \neg \alpha) &\rightarrow (\alpha \rightarrow
-     \beta) & \text{\autoref{enu:1} auf Blatt 2}\\
+     \beta) & \text{\autoref{enu:1} auf Blatt 2}\displaybreak[0]\\
   (\alpha \rightarrow \beta) &\rightarrow (\neg \beta \rightarrow \neg
      \alpha) & \text{\autoref{lem:5}}\\
   \alpha &\rightarrow (\neg \beta \rightarrow \neg (\alpha \rightarrow \beta))
@@ -1862,17 +1874,17 @@ Nocheinmal als Zusammenfassung alle gezeigten Theoreme:
 \subsection{Vollständigkeit von \texorpdfstring{$\mathrm{L}$}{L}}
 
 Mit \autoref{satz:1} hatten wir bereits gezeigt, dass jedes Theorem von
-$\mathrm{L}$ eine Tautologie ist. In diesem Abschnitt soll die die
-\emph{Vollständigkeit} von $\mathrm{L}$ gezeit werden, also dass jede
+$\mathrm{L}$ eine Tautologie ist. In diesem Abschnitt soll die
+\emph{Vollständigkeit von $\mathrm{L}$} gezeit werden, also dass jede
 Tautologie ein Theorem von $\mathrm{L}$ ist.
 
 Im ersten Schritt (\autoref{satz:2}) werden wir zeigen, dass
-aus einer Belegung -- das ist ja eine Menge von Literalen -- $\cA$,
+aus einer Belegung~$\cA$ -- das ist ja eine Menge von Literalen --,
 unter der die Formel $\alpha$ den Wahrheitswert $w$ hat,
-die Formel $\alpha$ gefolgert werden kann (d.\,h. $\cA\Lvdash \alpha$).
+die Formel~$\alpha$ gefolgert werden kann -- d.\,h. $\cA\Lvdash \alpha$.
 
 Im zweiten Schritt (\autoref{satz:3}) wird gezeigt,
-wie man die Hypothesenmengen für tautologien verkleiner kann.
+wie man die Hypothesenmengen für Tautologien verkleinern kann.
 Für eine Tautologie $\alpha$ und jede Belegung $\cA$
 gilt folglich $\cA \Lvdash \alpha$.
 Wenn die Belegungen $\cA$ und $\cA'$ fast gleich sind
@@ -1881,7 +1893,8 @@ kann man diese Variable aus den Belegungen entfernen.
 Falls $B\in \cA$ und $\neg B\in\cA'$,
 dann gilt $\cA\setminus\{B\} \Lvdash \alpha$.
 Für eine Tautologie $\alpha$ kann man diesen Prozess wiederholen,
-bis die Hypothesenmenge leer ist, und damit folgt $\Lvdash \alpha$.
+bis die Hypothesenmenge leer ist, und damit folgt $\Lvdash \alpha$ -- jede
+Tautologie ist also eine Theorem von $\mathrm{L}$.
 
 
 \begin{satz}[Belegung und Hypothesen]\label{satz:2}
@@ -1901,34 +1914,31 @@ bis die Hypothesenmenge leer ist, und damit folgt $\Lvdash \alpha$.
     Sei $\phi_{\mathcal{A}} = \begin{cases} \phi & \mathcal{A}(\phi)=w\\
     \neg\phi & \mathcal{A}(\phi)=f\end{cases}$
 
-    Wir müssen $\cA\Lvdash \varphi_{\cA}$ zeigen und
-    machen das mittels Induktion über den Formelaufbau.
+    Wir zeigen $\cA\Lvdash \varphi_{\cA}$ mittels Induktion über den Formelaufbau.
 
     \begin{mdescription}
      \item[IA:] $\phi$ ist eine Variable, d.\,h.~$\phi=B$.
-      \begin{itemize}
-       \item $B\in\mathcal{A}$. Dann gilt $\mathcal{A}\Lvdash B$
-        (Deduktionstheorem).
-        Da $\mathcal{A}(B)=w$, folgt die Behauptung.
-       \item $\neg B\in\mathcal{A}$. Dann gilt $\mathcal{A}\Lvdash \neg B$.
-        Da $\mathcal{A}(B)=f$, folgt die Behauptung.
-      \end{itemize}
 
-     \item[IV:] für alle Formeln $\phi$ gilt $\mathcal{A}
-      \Lvdash \phi_{\mathcal{A}}$
+      Ist $\cA(B)=w$, d.\,h. $B\in\cA$, lässt sich mittels Deduktionstheorem
+      $\cA\Lvdash B$ herleiten und ebenso lässt sich im Fall von $\cA(B)=f$,
+      d.\,h. $\neg B\in\cA$, $\cA\Lvdash \neg B$ herleiten. Also gilt jeweils
+      die Behauptung.
 
-     \item[IS:] die Formel $\phi$ kann die Gestalt $\neg\alpha$ oder $\alpha
+     \item[IV:] Für alle Formeln $\phi$ gilt $\cA \Lvdash \phi_{\cA}$.
+
+     \item[IS:] Die Formel $\phi$ kann die Gestalt $\neg\alpha$ oder $\alpha
       \rightarrow\beta$ mit zwei beliebigen Formeln $\alpha$ und $\beta$ haben.
+      Betrachten wir also beide Fälle:
 
       \begin{faelle}
        \item $\phi$ ist eine Negation -- $\phi=\neg\alpha$
         \begin{faelle}
-         \item Unter der Belegung $\cA$ ist $\phi$ $wahr$. Dann muss $\alpha$
-          unter der Belegung $falsch$ sein. Nach der Induktionsvorraussetzung
-          gilt $\mathcal{A} \Lvdash \alpha_{\mathcal{A}} = \neg\alpha = \phi$,
-          d.\,h. $\mathcal{A} \Lvdash \phi = \phi_{\mathcal{A}}$.
+         \item Unter der Belegung $\cA$ ist die Formel $\phi$ $\mathit{wahr}$.
+          Dann muss $\alpha$ unter der Belegung $\mathit{falsch}$ sein. Nach
+          der Induktionsvorraussetzung gilt $\cA \Lvdash\alpha_{\cA} =
+          \neg\alpha = \phi = \phi_{\mathcal{A}}$.
 
-         \item $\phi$ ist $falsch$ unter der Belegung $\cA$, also ist
+         \item Die Formel $\phi$ ist $falsch$ unter der Belegung $\cA$, also ist
           $\mathcal{A}(\alpha)=w$.
           \begin{align*}
             (1)\quad & \alpha & \text{IV}\\
@@ -1941,7 +1951,8 @@ bis die Hypothesenmenge leer ist, und damit folgt $\Lvdash \alpha$.
 
        \item $\phi$ ist eine Implikation -- $\phi=\alpha\rightarrow\beta$
         \begin{faelle}
-         \item $\phi$ ist $falsch$ unter der Belegung $\mathcal{A}$. Dann muss
+         \item Unter der Belegung $\mathcal{A}$ hat $\phi$ den Wahrheitswert
+          $\mathit{falsch}$. Dann muss
           gelten, dass $\mathcal{A}(\alpha)=w$ und $\mathcal{A}(\beta)=f$ ist.
           \begin{align*}
             (1)\quad & \alpha &\text{IV}\\
@@ -1955,11 +1966,11 @@ bis die Hypothesenmenge leer ist, und damit folgt $\Lvdash \alpha$.
           Also gilt $\mathcal{A} \Lvdash
           \neg(\alpha\rightarrow\beta) = \phi_{\mathcal{A}}$.
 
-         \item $\phi$ ist $wahr$ unter der Belegung $\mathcal{A}$, d.\,h.
-          $\phi_{\mathcal{A}}=\alpha\rightarrow\beta$. Für die beiden
+         \item $\phi$ ist $\mathit{wahr}$ unter der Belegung $\mathcal{A}$.
+          Wir müssen also $\cA\Lvdash\alpha\rightarrow\beta$ zeigen. Für die beiden
           Teilformeln gibt es folgende Möglichkeiten:
           \begin{itemize}
-           \item Die Formel $\alpha$ ist $falsch$ unter der Belegung $\cA$.
+           \item Die Formel $\alpha$ ist $\mathit{falsch}$ unter der Belegung $\cA$.
             Nach Induktionsvorraussetzung gilt dann $\mathcal{A} \Lvdash
             \neg\alpha$.
             \begin{align*}
@@ -1977,7 +1988,7 @@ bis die Hypothesenmenge leer ist, und damit folgt $\Lvdash \alpha$.
             \begin{align*}
               (1)\quad & \beta &\text{IV}\\
               (2)\quad & \beta\rightarrow(\alpha\rightarrow\beta) &
-                 \text{A1}\\
+                 \text{(A1)}\\
               (3)\quad & \alpha\rightarrow\beta &\text{MP 1,2}
             \end{align*}
             Also gilt $\mathcal{A} \Lvdash
@@ -1996,7 +2007,7 @@ wie der aus einer Belegung konstruierte Beweis aussieht.
   Wir betrachten die Formel
   $\phi = A\rightarrow \neg(\neg A\rightarrow B)$
   und die Belegung $\mathcal{A}=\{A, \neg B\}$.
-  Da $\cA(\phi)=f$ ist
+  Da $\cA(\phi)=f$ gilt, ist
   $\phi_{\mathcal{A}} = \neg(A\rightarrow \neg(\neg A\rightarrow B))$.
   Der Beweis für $\cA\Lvdash \varphi_{\cA}$ wird induktiv aus dem
   Formelaufbau von $\varphi$ konstruiert.
@@ -2051,7 +2062,7 @@ Wir wenden auf beide Folgerungen das Deduktionstheorem an und erhalten
     \neg A \Lvdash B\rightarrow(A \rightarrow (B\rightarrow B))\text{~und~}
        \neg A \Lvdash \neg B\rightarrow (A \rightarrow (B\rightarrow B))
   \end{gather*}
-Die beiden Folgerungen haben nun die gleichen Hypothesen.
+Die beiden Folgerungen haben nun die gleichen Hypothesenmengen.
   Unter Verwendung von \autoref{lem:7}
 ($\Lvdash (\alpha \rightarrow \beta) \rightarrow ((\neg \alpha
   \rightarrow \beta) \rightarrow \beta)$ mit der Zuordnung $\alpha=B$ und
@@ -2084,7 +2095,8 @@ aus ihren Beweisen mit den verschiedenen Belegungen
 als Hypothesen konstruiert.
 \end{bsp}
 
-Im Beweis des folgenden Satzes wird dieses Vorgehen benutzt.
+Dieses Verfahren verwenden wir im Beweis des folgenden Satzes für die
+allgemeine Verkleinerung der Hypothesenmenge für den Beweis einer Tautologie.
 
 \begin{satz}[Hypothesenmengen bei Tautologien verkleinern]\label{satz:3}
   Sei $\phi$ eine Tautologie.
@@ -2146,14 +2158,17 @@ Im Beweis des folgenden Satzes wird dieses Vorgehen benutzt.
 \end{korol}
 
 Der Begriff "`Tautologie"' ist ein semantischer Ausdruck
--- er basiert auf der Bedeutung (dem Wahrheitswert) von Formeln.
+-- er basiert auf der Bedeutung (dem Wahrheitswert bei einer bestimmten
+Belegung) von Formeln.
 Dagegen ist "`$\Lvdash$"' ein syntaktischer Ausdruck --
 er basiert auf der äußeren Form von Formeln.
 Ob eine Formel ein Axiom ist oder ob sie aus anderen Formeln
  abgeleitet werden kann, ergibt sich nur aus ihrer Form; man
  muss dazu nichts über ihre Wahrheitswerte wissen.
-\autoref{korrektkeit-und-vollst-von-L} besagt, dass beide
-Begriffe gleichbedeutend sind.
+\autoref{korrektkeit-und-vollst-von-L} verbindet nun diese beiden
+Begriffe. Ob man eine Formel nun aus der Sicht der Wahrheitswerte oder
+aufgrund ihrer Struktur bewertet, man kommt immer zu dem gleichen
+Ergebnis.
 Die semantische und die syntaktische Betrachtungsweise
 der Aussagenlogik sind also gleich.
 
@@ -3411,7 +3426,7 @@ Offensichtlich gilt:
 \section{Theorien 1.~Ordnung}
 
 \begin{defini}[Theorie 1.~Ordnung]\label{def:theo1.ord}
-  Eine \emph{Theorie 1.~Ordnung} $\mathrm{K}$ besteht aus
+  Eine \emph[index=Theorie!1.~Ordnung]{Theorie 1.~Ordnung} $\mathrm{K}$ besteht aus
   \begin{enumerate}[1.]
    \item \textit{Formeln}
 
