- Beginn Abschnitt 3.6 und Satz 3.6.1
git-svn-id: https://svn.lug-jena.de/uni-skripte@992 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2185,7 +2185,7 @@ das Inverse ist $X^{-1}(x)=\overline{X(x)}$.
       Also ist $\phi^{-1}(N(X_{0},E,\epsilon))= N(X^{-1}_{0},E,\epsilon)$ offen.$)$
      \item Die Multiplikation $\phi\colon(X_{1}, X_{2})\rightarrow X_{1}X_{2}$
       ist stetig: Es genügt zu zeigen, dass die Mengen
-      $\phi^{-1}(N(X_{0},E,\epsilon)=
+      $\phi^{-1}(N(X_{0},E,\epsilon))=
       \{(X_{1},X_{2})\in\Gamma\times\Gamma\colon \abs{X_{1}(x)X_{2}(x)-
       X_{0}(x)}<\epsilon\ x\in E\}=\colon M$ offen sind. Dazu sei $(X^{0}_{1},
       X^{0}_{2})\in M$. Wegen der Kompaktheit von $E$ und der Stetigkeit von
@@ -2427,9 +2427,7 @@ $L_{p}(G)=L_{p}(G,\FB(G),\mu)$ für $1\leq p\leq\infty$.
   beschränkte Funktion mit
   \begin{gather*}
     \norm{\hat{f}}_{\infty} = \sup_{x\in G} \abs{\hat{f}(x)}\leq \norm{f|
-       L_{1}(G)}
-  \end{gather*}
-  \begin{gather*}
+       L_{1}(G)}\\
     \hat{f}(\chi)= \int_{G} f(x)\overline{\chi(X)}\,D\mu(X)\\
     \abs{\hat{f}(\chi)} \leq \int_{G} \abs{f(x)}\,d\mu= \norm{f|L_{1}}
   \end{gather*}
@@ -2496,8 +2494,73 @@ $L_{p}(G)=L_{p}(G,\FB(G),\mu)$ für $1\leq p\leq\infty$.
 	\int_{K} \abs{f(x)} \abs{K(x,y)-K(x,y_{0})}\,d\mu(x) &< 2\epsilon
 	   \int_{K}\abs{f} =2\epsilon\norm{f|L_{1}}
       \end{align*}
+
+      Nach den Vorbemerkungen können wir den Satz beweisen:
+      Die vierte Vorbemerkung sagt uns, dass es genügt, zu zeigen, dass die
+      Abbildung $\Phi\colon G\times\Gamma\rightarrow\C$ gegeben durch
+      $(x,X)\mapsto X(x)$ stetig ist. Sei dazu $(x_{0}, X_{0})\in
+      G\times\Gamma, z_{0}=X_{0}(x_{0})$ und $I\colon=\{z\in\T\colon
+      \abs{z-z_{0}}<\epsilon\}$. Es genügt, zu zeigen, dass
+      $\Phi^{-1}(I)=\{(x,X)\in G\times\Gamma\colon \abs{X(x)-
+      z_{0}}<\epsilon\}$ eine Umgebung von $(x_{0}, X_{0})\subseteq
+      G\times\Gamma$ ist. Dazu sei $E$ eine kompakte Umgebung von $x_{0}$ und
+      \begin{gather*}
+	N=N(X_{0},E,\nicefrac{\epsilon}{2})=\{X\in\Gamma\colon
+	   \abs{X(x)-X_{0}(x)}<\nicefrac{\epsilon}{2}\,x\in E\}
+      \end{gather*}
+      eine Umgebung von $X_{0}\in\Gamma$. Dann ist $(E\cap U)\times N$ eine
+      Umgebung von $(x_{0}, X_{0})$ und für $(x,X)\in(E\cap U)\times N)$ gilt,
+      $\abs{X(x)-z_{0}}= \abs{X(x)-X_{0}(x_{0})}\leq \abs{X(x)-X_{0}(x)}+
+      \abs{X_{0}(x)-X_{0}(x_{0})}< \nicefrac{\epsilon}{2}+
+      \nicefrac{\epsilon}{2}= \epsilon$.
     \end{proof}
   \end{enumerate}
+\end{satz}
+
+\paragraph{Eigenschaften der Fouriertransformation}
+\begin{description}
+ \item[Linearität] $\widehat{\lambda g+\mu g}=\lambda\hat{f}+\mu\hat{g}$
+ \item[Faltung] $f+g(y)= \int_{G} f(x) g(x^{-1}y)\,d\mu(x)= \int_{G}
+  f(x^{-1}y)g(x)\,d\mu(x)$ sowie $\widehat{f*g}(x)= \hat{f}(x)\hat{g}(x)$.
+  \begin{proof}
+    \begin{align*}
+      \widehat{f*g}(x) &= \int_{G} (f*g)(y) \overline{X(y)}\,d\mu(y)= \int_{G}
+	 \int_{G} f(x) g(x^{-1}y)\,d\mu(x)\overline{X(y)}\,d\mu(y)\\
+      &= \int_{G} f(x) \left(\int_{G} g(xy^{-1})
+	 X(y^{-1})\,d\mu(y)\right)\,d\mu(x)\\
+      &= \int_{G} f(x) \overline{X(x)} \left(\int_{G} g(x^{-1}y)
+	 X(xy^{-1})\,d\mu(y)\right)\,d\mu(x)\\
+      &= \int_{G} f(x) \overline{X(x)} \left(\int_{G} g(x^{-1}y)
+	 \overline{X(xy^{-1})}\,d\mu(y)\right)\,d\mu(x)\\
+      &= \int_{G} f(x) \overline{X(x)} \int_{G} g(z)
+	 \overline{X(z)}\,d\mu(z)\,d\mu(x)= \hat{f}(x)\hat{g}(x)
+    \end{align*}
+  \end{proof}
+\end{description}
+
+\section{Die Fouriertransformation auf kompakten abelschen Gruppen}
+
+Sei $G$ eine kompakte abelsche Gruppe, $\mu$ ein normalisiertes Haarmaß und
+$\Gamma=\hat{G}$ die duale Gruppe.
+
+\begin{bsp}
+  Wir kennen bereits die Beispiele $\T$, Cantorgruppe, Produkte von kompakten
+  Gruppen, $L_{2}(G)= L_{2}(G, \mu)$, Hilbertraum $\langle f,g\rangle=
+  \int_{G} f\overline{g}\,d\mu$.
+\end{bsp}
+
+%satz 3.6.1
+\begin{satz}
+  Die Charaktere auf $G$ bilden ein Orthonormalsystem in $L_{2}(G)$.
+  \begin{proof}
+    Sei $X_{1}, X_{2}\in\Gamma$ und $\langle X_{1}, X_{2}\rangle= \int_{G}
+    X_{1}\overline{X_{2}}\,d\mu$. Ist $X=X_{1}=X_{2}$, so folgt,
+    $\norm{X|L_{2}(G)}^{2}=\langle X,X\rangle= \int_{G} 1\,d\mu=\mu(G)=1$.
+    Ist $X_{1}\neq X_{2}$, so ist $X=X_{1}\overline{X_{2}}\in\Gamma$ und
+    $X\neq1$. Wähle $y\in G$ mit $X(y)\neq1$. Dann gilt, $X(y) \int_{G}
+    X(x)\,d\mu(x)= \int_{G} X(xy)\,d\mu(x)= \int_{G} X(x)\,d\mu(x)$. Das
+    impliziert $\langle X_{1}, X_{2}\rangle= \int_{G} X(x)\,d\mu(x)= 0$. 
+  \end{proof}
 \end{satz}
 
 \chapter{Wavelets}
