- Ende des dritten Kapitels
git-svn-id: https://svn.lug-jena.de/uni-skripte@995 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/hinrichs-fourierana/skript.latex
+++ b/hinrichs-fourierana/skript.latex
@@ -2646,6 +2646,158 @@ $\Gamma=\hat{G}$ die duale Gruppe.
   \end{proof}
 \end{satz}
 
+%satz 3.6.4
+\begin{satz}[Riemann"=Lebesgue]
+  Sei $f\in L_{1}(G)$. Dann verschwinden die Fourierkoeffizienten von $f$ im
+  Unendlichen, d.\,h. $\forall\epsilon>0\exists A\subseteq\Gamma$ endlich so
+  dass $\abs{\hat{f}(X)}<\epsilon$ für $X\in\Gamma\setminus A$ gilt.
+  \begin{proof}
+    Für $f\in L_{2}(G)$ gilt die Behauptung, da $\norm{f|L_{2}}^{2}=
+    \sum_{X\in \Gamma} \abs{\langle f,X\rangle}^{2}= \sum_{X\in \Gamma}
+    \abs{\hat{f}(X)}^{2}$ ist. Da Treppenfunktionen dicht in $L_{2}(G)$ und in
+    $L_{1}(G)$ sind und $L_{2}(G)\subseteq L_{1}(G)$ gilt, ist $L_{2}(G)$
+    dicht in $L_{1}(G)$. Ist $f\in L_{1}(G), \epsilon>0$, dann wähle $g\in
+    L_{2}(G)$ mit $\norm{f-g|L_{1}}<\nicefrac{\epsilon}{2}$ und anschließend
+    $A\subseteq\Gamma$ mit $\abs{\hat{g}(X)}<\nicefrac{\epsilon}{2}$ für
+    $X\in\Gamma\setminus A$. Dann ist für $X\in\Gamma\setminus A$ auch
+    $\abs{\hat{f}(X)}\leq \abs{\hat{f}(X)-\hat{g}(X)}+ \abs{\hat{g}(X)} \leq
+    \norm{f-g|L_{1}}+\abs{\hat{g}(X)} < \epsilon$.
+  \end{proof}
+\end{satz}
+
+% Herr Hinrichs hat im folgenden den Satz von Stone-Weierstraß bewiesen. ich
+% habe den Beweis ausgelassen.
+
+\section{Die Fouriertransformation auf $L_{2}(G)$--Pontrjagin"=Dualität}
+
+Im Allgemeinen ist $L_{2}(G)\nsubseteq L_{1}(G)$ \help{Muss das nicht eher
+subsetneq heißen?}, aber $L_{2}(G)\cap L_{1}(G)\subseteq L_{2}(G)$ dicht. Ist
+die Fouriertransformation also (auf einem dichten Teilraum von) $L_{2}(G)$
+beschränkt, so kann man sie auf $L_{2}(G)$ fortsetzen. Den Weg dazu wollen wir
+in diesem Abschnitt ohne Beweise skizzieren.
+
+\begin{defini}
+  Sei $G$ eine Gruppe, $\phi\colon G\rightarrow\C$. Dann heißt $\phi$ \highl{positiv
+  definit}, wenn
+  \begin{gather*}
+    \sum_{h,k=1}^{N} \lambda_{h} \overline{\lambda_{k}}
+       \phi(x_{h}x_{k}^{-1})\geq0
+  \end{gather*}
+  für alle $\lambda_{1},\dotsc,\lambda_{N}\in\C, x_{1},\dotsc, x_{N}\in G$
+  gilt.
+\end{defini}
+
+\begin{bsp}
+  Sei $G$ eine lokalkompakte abelsche Gruppe, $f\in L_{1}(G)$. Setze
+  $f^{*}(x)=\overline{f(x^{-1})}$. Dann ist $\phi=f^{*}*f$ positiv definit und
+  stetig. Denn:
+  \begin{align*}
+    \phi(x_{h}x_{k}^{-1}) &= \int_{G} f^{*}(x)
+       f(x^{-1}x_{h}x_{k}^{-1})\,d\mu(x)\\
+    &= \int_{G} f^{*}(xx_{h}^{-1}) f(x^{-1}x_{k})\,d\mu(x)\\
+    &= \int_{G} \overline{f(x^{-1}x_{h})} f(x^{-1}x_{k})\,d\mu(x)\\
+    \Rightarrow\sum \lambda_{h} \overline{\lambda_{k}} \phi(x_{h}x_{k}^{-1})
+       &= \int_{G} \abs{\sum \lambda_{h} f(x^{-1}x_{h})}^{2}\,d\mu(x) \geq0
+  \end{align*}
+  Die Stetigkeit erhalten wir durch Approximation von $f,g\in L_{2}(G)$ durch
+  Funktionen aus $C_{0}(G)$ und Beweis, dass $f*g$ stetig ist.
+\end{bsp}
+
+Wir definieren für die folgenden Sätze:
+\begin{gather*}
+  P = \spn\{f\in L_{1}(G)\colon f \text{ positiv definit}\}
+\end{gather*}
+
+%saz 3.7.1
+\begin{satz}
+  $P$ ist dicht in $L_{1}(G)$ und $L_{2}(G)$.
+\end{satz}
+
+%satz 3.7.2
+\begin{satz}[Fourierinversion]
+  Sei $f\in P$. Dann ist $\hat{f}\in L_{1}(\Gamma)$. Das Haarmaß $\rho$ auf
+  $\Gamma$ kann so normalisiert werden, dass gilt:
+  \begin{gather*}
+    f(x) = \int_{\Gamma} \hat{f}(X) \overline{X(x)}\,d\rho(X)
+  \end{gather*}
+\end{satz}
+
+%satz 3.7.3
+\begin{satz}[Plancherel"=Gleichung]
+  Sei $f\in L_{1}(G)\cap L_{2}(G)$. Dann gilt
+  \begin{gather*}
+    \norm{\hat{f}|L_{2}(\Gamma)} = \norm{f|L_{2}(G)}
+  \end{gather*}
+  d.\,h. die Fouriertransformation ist eine Isometrie. Weiterhin ist das Bild
+  von $L_{1}\cap L_{2}$ dicht in $L_{2}$.
+  \begin{proof}
+    Sei $f\in L_{1}\cap L_{2}$. Betrachten $g=f^{*}*f$. Dann gilt $\hat{g}(X)=
+    \widehat{f^{*}*f}(X)= \widehat{f^{*}}(X)\hat{f}(X)$. Weiter ist:
+    \begin{align*}
+      \widehat{f^{*}}(X) &= \int_{G} f^{*}(x) \overline{X(x)}\,d\mu(x)=
+	 \int_{G} \overline{f(x^{-1})} \overline{X(x)}\,d\mu(x)\\
+      &= \overline{\int_{G} f(x^{-1}) X(x)\,d\mu(x)} = \overline{\int_{G}
+	 f(x^{-1}) \overline{X(x^{-1})}\,d\mu(x)}\\
+      &= \overline{\int_{G} f(y) \overline{X(y)}\,d\mu(y)}=
+	 \overline{\hat{f}(X)}
+    \end{align*}
+    Also ist $\hat{g}(X)= \abs{\hat{f}(X)}^{2}$. Wir wissen, $g\in P$ und mit
+    der Fouriertransformation erhalten wir also: $g(x)= \int_{\Gamma}
+    \hat{g}(X) \overline{X(x)}\,d\rho(x)$. Schließlich ist
+    \begin{align*}
+      \norm{f|L_{2}}^{2} &= \int_{G} \abs{f(x)}^{2}\,d\mu(x) = \int_{G} f(x)
+	 \overline{f(x)}\,d\mu(x)\\
+      &= \int_{G} f(x) f^{*}(x^{-1})\,d\mu(x)= \int_{G} f(x)
+	 f^{*}(ex^{-1})\,d\mu(x)= g(e)\\
+      g(e) &= \int_{\Gamma} \hat{g}(X) \overline{X(e)}\,d\rho(X)=
+	 \int_{\Gamma} \hat{g}(X)\,d\rho(X)\\
+      &= \int_{\Gamma} \abs{\hat{f}(X)}^{2}\,d\rho(X)=
+	 \norm{\hat{f}|L_{2}(\Gamma)}
+    \end{align*}
+  \end{proof}
+\end{satz}
+
+\begin{folg}
+  Die Fouriertransformation kann zu einer Isometrie von $L_{2}(G)$ auf
+  $L_{2}(\Gamma)$ fortgesetzt werden, d.\,h. $\norm{\hat{f}|L_{2}(\Gamma)}=
+  \norm{f|L_{2}(G)}$ für alle $f\in L_{2}(G)$ und zu jedem $g\in
+  L_{2}(\Gamma)$ existiert ein $f\in L_{2}(G)$ mit $\hat{f}=g$.
+\end{folg}
+
+\paragraph{Pontrjagin"=Dualität}
+
+\begin{align*}
+  G &= \T & \hat{G} &\cong \Z & \hat{\hat{G}} &\cong \T = G\\
+  G &= \R & \hat{G} &\cong \R & \hat{\hat{G}} &\cong \R
+\end{align*}
+Gilt allgemein $\hat{\hat{G}}\cong G$? Hierzu brauchen wir $\Phi\colon
+G\rightarrow\hat{\hat{G}}$. Dabei sind $\hat{\hat{G}}$ die Charaktere auf
+$\hat{G}$. Es ist $\Phi(y)\colon= f_{y}$ mit $f_{y}(X)=X(y)$.
+\begin{enumerate}
+ \item Da $(x,X)\mapsto X(x)$ eine stetige Abbildung von
+  $G\times\Gamma\rightarrow\C$ ist, ist auch $f_{y}$ stetig.
+ \item $\abs{f_{y}(X)}=1$ für alle $X\in\Gamma$
+ \item $f_{y}(X_{1}X_{2})=(X_{1}X_{2})(y)= X_{1}(y)X_{2}(y)=
+  f_{y}(X_{1})f_{y}(X_{2})$
+\end{enumerate}
+Also ist $f_{y}$ ein Charakter auf $\hat{G}$, d.\,h. ein Element von
+$\hat{\hat{G}}$.
+
+Weiterhin ist $\Phi$ ein Homomorphismus. Denn $\Phi(y_{1}y_{2})=
+\Phi(y_{1})\Phi(y_{2})$ und $f_{y_{1}y_{2}})(X)= X(y_{1}y_{2})=
+X(y_{1})X(y_{2})= f_{y_{1}}(X)f_{y_{2}}(X)$.
+
+$\Phi$ ist injektiv: $y_{1}, y_{2}\in G, y_{1}\neq y_{2}$. $\hat{G}$ trennt
+die Punkte von G $\Rightarrow\exists X\in\hat{G}$ mit $X(y_{1})\neq X(y_{2})$,
+d.\,h. $f_{y_{1}}\neq f_{y_{2}}$. Weiterihnh ist $\Phi$ surjektiv und ein
+Homöomorphismus. Also gilt:
+
+%satz 3.7.4
+\begin{satz}[Pontrjagin"=Dualität]
+  Sei $G$ eine lokalkompakte abelsche Gruppe. Dann ist $\hat{\hat{G}}\cong G$,
+  wobei $\Phi\colon G\rightarrow\hat{\hat{G}}, (\Phi(y))(X)\colon= X(y)$ ein
+  Gruppenisomorphismus und Homöomorphismus ist.
+\end{satz}
 \chapter{Wavelets}
 
 \todo{Vorlesungen ergänzen}
